--- a/templates/syslog-ng.conf.erb
+++ b/templates/syslog-ng.conf.erb
@@ -20,7 +20,7 @@
 @define syslog_dir "<%= @log_dir %>/syslog"
 
 # include base directory
-@define include_base_dir "<%= @conf_dir %>syslog-ng.conf.d"
+@define include_base_dir "<%= @conf_dir %>/syslog-ng.conf.d"
 
 
 ### Options ###
