--- a/templates/syslog-ng.conf.d/destination.d/syslog.conf.erb
+++ b/templates/syslog-ng.conf.d/destination.d/syslog.conf.erb
@@ -3,5 +3,6 @@
 destination d_syslog_<%= @title %> {
   syslog( "<%= @title %>"
     transport("<%= @transport %>")
+    port(<%= @real_port %>)
   );
 };
