--- a/templates/syslog-ng.conf.d/log.d/syslog.conf.erb
+++ b/templates/syslog-ng.conf.d/log.d/syslog.conf.erb
@@ -1,3 +1,3 @@
-# Remote log for <%= @title %>
+# Remote log for <%= @service_name %>
 
-log { source(s_log); filter(f_<%= @title %>); destination(d_syslog_<%= @destination %>); };
+log { source(s_log); filter(f_<%= @service_name %>); destination(d_syslog_<%= @destination %>); };
