--- a/templates/syslog-ng.conf.erb
+++ b/templates/syslog-ng.conf.erb
@@ -1,8 +1,8 @@
 ###############################################################################
-# Modular syslog-ng configuration, with one log file per daemon or service 
+# Modular syslog-ng configuration, with one log file per daemon or logpath 
 #
 # The log files are stored below /var/log/syslog/<daemon>.log
-# Log messages which aren't assosiated with a specifc service or daemon will be
+# Log messages which aren't assosiated with a specifc logpath or daemon will be
 # logged to the catch-all /var/log/messages log file.
 #
 # Authors:
@@ -45,12 +45,6 @@ include "`include_base_dir`/filter.d";
 #
 # include all common destinations
 include "`include_base_dir`/destination.d";
-
-
-### Services ###
-#
-# include specific daemon and service configurations
-include "`include_base_dir`/service.d";
 
 
 ### Log paths ###
