fix destination name to match logpath

--- a/templates/syslog-ng.conf.d/destination.d/mongodb.conf.erb
+++ b/templates/syslog-ng.conf.d/destination.d/mongodb.conf.erb
@@ -1,6 +1,6 @@
 # mongodb destination
 
-destination d_mongodb-<%= @title %> {
+destination d_mongodb_<%= @title %> {
   mongodb( "<%= @title %>"
   );
 };
